# uint

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Changelog.md  README.md  Readme.md  build.rs  clippy.toml  criterion.rs  cspell.json  deny.toml  mit-license.md  release.toml  rustfmt.toml  uniffi.toml
.cargo/: audit.toml  config.toml  katex-header.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml  bug_report.md  feature_request.md  question.md
.github/scripts/: issue_tracker.py  release.py
.github/workflows/: audit.yml  bench.yml  ci.yml  codspeed.yml  issue_tracker.yml
benches/: bench.rs  prelude.rs
benches/benches/: add.rs  base_convert.rs  bits.rs  cmp.rs  div.rs  fmt.rs  from.rs  log.rs  mod.rs  modular.rs  mul.rs  pow.rs  pow_mod_redc.rs  prelude.rs  root.rs  string.rs
benches/benches/algorithms/: gcd.rs  mod.rs  mul.rs  shift.rs
benches/benches/algorithms/div/: mod.rs  reciprocal.rs  small.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/.github/workflows/: CI.yml
bindings/python/src/: lib.rs
crates/ruint/: .cargo  Cargo.toml
crates/ruint-macro/: Cargo.toml  README.md
crates/ruint-macro/src/: lib.rs
crates/ruint/benches/: bench.rs
crates/ruint/benches/benches/: modular.rs
crates/ruint/benches/benches/algorithms/: gcd.rs  mod.rs  mul.rs
crates/ruint/benches/benches/algorithms/div/: reciprocal.rs  small.rs
crates/ruint/proptest-regressions/: bits.txt  from.txt  gcd.txt  modular.txt  pow.txt  root.txt
crates/ruint/proptest-regressions/support/: postgres.txt  scale.txt
crates/ruint/src/: add.rs  bits.rs  bytes.rs  const_for.rs  div.rs  from.rs  gcd.rs  lib.rs  log.rs  modular.rs  mul.rs  pow.rs  root.rs  special.rs
crates/ruint/src/algorithms/: mod.rs  mul.rs  mul_redc.rs
crates/ruint/src/algorithms/div/: small.rs
crates/ruint/src/algorithms/gcd/: matrix.rs
crates/ruint/src/support/: alloy_rlp.rs  ark_ff.rs  fastrlp.rs  mod.rs  postgres.rs  rlp.rs  serde.rs  sqlx.rs
examples/: macros.rs
proptest-regressions/: bits.txt  div.txt  fmt.txt  from.txt  log.txt  modular.txt  mul.txt  pow.txt  proptest.txt
proptest-regressions/algorithms/: mul_redc.txt
proptest-regressions/algorithms/div/: knuth.txt  reciprocal.txt  small.txt
proptest-regressions/algorithms/gcd/: matrix.txt  mod.txt
proptest-regressions/support/: ark_ff.txt  postgres.txt  serde.txt
ruint-bench/: Cargo.toml
ruint-bench/src/: lib.rs
ruint-macro/: Cargo.toml  README.md  Readme.md
ruint-macro/src/: lib.rs
ruint-macro/tests/: parse_mixed.rs
src/: add.rs  aliases.rs  base_convert.rs  bit_arr.rs  bit_vec.rs  bits.rs  bytes.rs  cmp.rs  const_for.rs  constructors.rs  div.rs  fmt.rs  from.rs  gcd.rs  lib.rs  log.rs  macros.rs  modular.rs  mul.rs  mul_mod.rs  mulmod.rs  pow.rs  proptest.rs  rand.rs  root.rs  signed.rs  special.rs  string.rs  test_utils.rs  utils.rs
src/algorithms/: add.rs  cmp.rs  div.rs  mod.rs  mul.rs  mul_redc.rs  ops.rs  shift.rs
src/algorithms/div/: knuth.rs  mod.rs  reciprocal.rs  small.rs
src/algorithms/gcd/: gcd_old.rs  matrix.rs  mod.rs
src/support/: alloy_rlp.rs  arbitrary.rs  ark_ff.rs  ark_ff_04.rs  ark_ff_05.rs  bigdecimal.rs  bincode_2.rs  bn_rs.rs  borsh.rs  bytemuck.rs  der.rs  diesel.rs  fastrlp.rs  fastrlp_03.rs  fastrlp_04.rs  mod.rs  num_bigint.rs  num_integer.rs  num_traits.rs  poseidon_rs.rs  posseidon_rs.rs  postgres.rs  primitive_types.rs  proptest.rs  pyo3.rs  quickcheck.rs  rand.rs  rand_09.rs  rkyv.rs  rlp.rs  scale.rs  scale_info.rs  serde.rs  sqlx.rs  ssz.rs  subtle.rs  uniffi.rs  valuable.rs  zeroize.rs
src/uint/: mod.rs
src/uint_dyn/: mod.rs
src/wrappers/: bits.rs  int.rs  mod.rs
tests/: parse_mixed.rs
uint-macro/: Cargo.toml  Readme.md
uint-macro/src/: lib.rs
