[package]
name = "ruint"
description = "Unsigned integer type with const-generic bit length"
version = "1.9.0"
keywords = ["uint"]
categories = ["mathematics"]
exclude = ["benches/", "proptest-regressions/", "tests/"]
readme = "README.md"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", ".cargo/katex-header.html"]

[workspace]
members = [".", "ruint-macro"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.65"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
license = "MIT"
homepage = "https://github.com/recmo/uint"
repository = "https://github.com/recmo/uint"

[workspace.dependencies]
ruint = { version = "1.9.0", path = "." }
ruint-macro = { version = "1.1.0", path = "ruint-macro" }

[[bench]]
name = "bench_uint"
harness = false
path = "benches/bench.rs"

[dependencies]
ruint-macro = { version = "1.1.0", path = "ruint-macro" }

thiserror = "1.0"

# support
alloy-rlp = { version = "0.3", optional = true }
arbitrary = { version = "1", optional = true }
ark-ff-04 = { version = "0.4.0", package = "ark-ff", optional = true }
ark-ff-03 = { version = "0.3.0", package = "ark-ff", optional = true }
bn-rs = { version = "0.2", optional = true }
fastrlp = { version = "0.3", optional = true }
num-bigint = { version = "0.4", optional = true }
parity-scale-codec = { version = "3", optional = true, features = ["derive", "max-encoded-len"] }
primitive-types = { version = "0.12", optional = true }
proptest = { version = "1", optional = true }
pyo3 = { version = "0.19", optional = true }
quickcheck = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
rlp = { version = "0.5", optional = true }
serde = { version = "1", optional = true }
valuable = { version = "0.1", optional = true }
zeroize = { version = "1.6", optional = true }

# postgres
bytes = { version = "1.4", optional = true }
postgres-types = { version = "0.2", optional = true }

# sqlx
sqlx-core = { version = "0.7", optional = true }

[dev-dependencies]
ruint = { workspace = true, features = ["arbitrary", "proptest"] }

ark-bn254-04 = { version = "0.4.0", package = "ark-bn254" }
ark-bn254-03 = { version = "0.3.0", package = "ark-bn254" }

criterion = "0.5"
rand = "0.8"

approx = "0.5"
bincode = "1.3"
coverage-helper = "0.1"
hex = "0.4"
hex-literal = "0.4"
postgres = "0.19"
proptest = "1.2"
serde_json = "1.0"

[features]
# nightly-only features
nightly = []
generic_const_exprs = ["nightly"]

# support
alloy-rlp = ["dep:alloy-rlp"]
arbitrary = ["dep:arbitrary"]
ark-ff = ["dep:ark-ff-03"]
ark-ff-04 = ["dep:ark-ff-04"]
bn-rs = ["dep:bn-rs"]
fastrlp = ["dep:fastrlp"]
num-bigint = ["dep:num-bigint"]
parity-scale-codec = ["dep:parity-scale-codec"]
primitive-types = ["dep:primitive-types"]
proptest = ["dep:proptest"]
pyo3 = ["dep:pyo3"]
quickcheck = ["dep:quickcheck"]
rand = ["dep:rand"]
rlp = ["dep:rlp"]
serde = ["dep:serde"]
valuable = ["dep:valuable"]
zeroize = ["dep:zeroize"]

postgres = ["dep:postgres-types", "dep:bytes"]
sqlx = ["dep:sqlx-core"]
