[package]
name = "ruint-bench"
description = "ruint benchmarks"
version = "0.0.0"
publish = false

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
test = false
doctest = false
doc = false
harness = false

[dev-dependencies]
ruint = { path = "..", features = ["std", "proptest"] }

arrayvec = "0.7"
criterion = { version = "3", package = "codspeed-criterion-compat" }
proptest = "1"

[[bench]]
name = "bench"
harness = false
path = "../benches/bench.rs"
