[package]
name = "ruint2-macro"
description = "The `uint!` macro for `Uint` literals"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
version = "1.0.2"
edition = "2021"
homepage = "https://github.com/recmo/uint"
repository = "https://github.com/recmo/uint"
keywords = ["uint", "macro"]
categories = ["mathematics"]
readme = "Readme.md"
license-file = "../mit-license.md"

[lib]
proc-macro = true

[dev-dependencies]
ruint = { path = ".." }

[package.metadata.release]
tag = false
